@@ -266,7 +266,7 @@ public static function define_setting_value ($settings)
 
 $notations['mup'] = array (
 	'name'        => 'Mup',
-	'url'         => 'http://www.arkkra.com/',
+	'url'         => 'http://scorerender.abelcheung.org/demo/demo-mup/',
 	'regex'       => '~\[mup\](.*?)\[/mup\]~si',
 	'starttag'    => '[mup]',
 	'endtag'      => '[/mup]',
