@@ -1,5 +1,10 @@
 2010-02-16  Abel Cheung  <abelcheung@gmail.com>
 
+	* notation/*.php:
+	- Point notation links to official page instead.
+
+2010-02-16  Abel Cheung  <abelcheung@gmail.com>
+
 	* wp-scorerender.php:
 	- Don't add any hook in admin page.
 
